--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,3 +1,11 @@
 <h1>Productos:</h1>
 
-<%= Date.today %>
+<% @products.each do |product| %>
+ 
+    <%= link_to product_path(product.id) do %>
+    <h2><%= product.title %></h2>
+    <p><%= product.description %></p>
+    <p><%= product.price %>$</p>
+    <% end %>
+
+<% end %>
